# python-lmss

./: .mypy.ini  .pylintrc  LICENSE  README.md  pyproject.toml
lmss/: __init__.py  diff.py  enrich.py  graph.py  owl.py  qa.py
tests/: test_graph.py  test_owl.py
