[tool.poetry]
name = "lmss"
version = "0.1.0"
description = "Legal Matter Standard Specification (LMSS)"
authors = ["273 Ventures <opensource@273ventures.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.2.0"
httpx = {extras = ["http2"], version = "^0.23.3"}
lxml = "^4.9.2"
rapidfuzz = "^2.13.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
