[tool.poetry]
name = "lmss"
version = "0.1.2"
description = "Legal Matter Standard Specification (LMSS)"
authors = ["273 Ventures <opensource@273ventures.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.3.2"
httpx = {extras = ["http2"], version = "^0.23.3"}
lxml = "^4.9.2"
rapidfuzz = "^2.15.0"
networkx = "^3.1"

openai = {version = "^0.27.4", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
pylint = "^2.17.2"
mypy = "^1.1.1"

[tool.poetry.extras]
enrich = ["openai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
