[tool.poetry]
name = "lmss"
version = "0.1.3"
description = "Legal Matter Standard Specification (LMSS)"
authors = ["273 Ventures <opensource@273ventures.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.3.2"
httpx = {extras = ["http2"], version = "^0.24.1"}
lxml = "^4.9.3"
rapidfuzz = "^3.1.2"
networkx = "^3.1"

openai = {version = "^0.27.9", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pylint = "^2.17.5"
mypy = "^1.5.1"

[tool.poetry.extras]
enrich = ["openai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
